--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gh_calendar
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+repository: https://github.com/Gyeony95/GH-Calendar
 
 environment:
   sdk: '>=2.19.4 <3.0.0'
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: 6.0.1
-  intl: 0.17.0
+  provider: ^6.0.1
+  intl: ^0.17.0
 
 
 dev_dependencies:
