--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: gh_calendar
-description: A new Flutter package project.
+description: This package provides the ability to easily draw a calendar with single date selections and period selections..
 version: 0.1.0
 repository: https://github.com/Gyeony95/GH-Calendar
 
